Revert "User bigger gif to exaggerate any effects"
This reverts commit ff473c45b9c32824a46a94d522b75341976983a9.

--- a/script-at-bottom.html
+++ b/script-at-bottom.html
@@ -25,7 +25,7 @@ Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
 Fusce cursus luctus tempus. Sed placerat nisi eget urna rhoncus vulputate. Quisque varius elit blandit, semper lorem at, fermentum nunc. Suspendisse in dolor nec nibh varius commodo sit amet eu nulla. Ut semper neque ac sapien porttitor maximus. Pellentesque vel diam dictum, varius magna fermentum, iaculis metus. Nunc ante neque, facilisis eget nunc in, efficitur porttitor purus. Quisque auctor rutrum imperdiet. Fusce ut dignissim elit.
 </p>
 
-<img src="http://i.imgur.com/xeN8b56.gif"></img>
+<img src="http://25.media.tumblr.com/6ced3000389da1433b13c8a18bfeaf75/tumblr_mo9r0lfADt1rjcfxro1_400.gif"></img>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ember.js/2.2.0/ember.min.js"></script>
 </body>
